# minimal_web

./: .gitignore  Cargo.toml  README.md  run
migrations/: 20220516122048_initial.sql
src/: db.rs  main.rs
src/forecasts/: crud.rs  list.rs  mod.rs  routes.rs
src/forecasts/ui/: create_ranges.rs  forecast.rs  list.rs  mod.rs  range.rs
static/: custom.css
templates/: base.html  forecast.html  index.html  list.html  ranges.html
templates/forecasts/: _create_ranges.html  _range.html  _ranges.html  create.html  forecast.html  list.html  saved_forecast.html
