[package]
name = "minimal_web"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
actix-web = "4"
actix-files = "0.6.0"
askama = "0.11.0"
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
askama = "0.11.0"