[package]
edition = "2021"
name = "minimal_web"
version = "0.1.0"

[dependencies]
actix-files = "0.6.0"
actix-web = "4"
anyhow = "1.0.57"
askama = "0.11.0"
chrono = {version = "0.4.19", features = ["serde"]}
env_logger = "0.9.0"
log = "0.4.17"
serde = {version = "1.0", features = ["derive"]}
sqlx = {version = "0.5.13", features = ["runtime-actix-native-tls", "sqlite", "migrate"]}
strum = "0.24"
strum_macros = "0.24"

[build-dependencies]
askama = "0.11.0"
